--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
 .vscode/
-node_modules/
 shell.nix
+
+# dependencies
+/web/node_modules
+/web/.pnp
+.pnp.js
+
+# testing
+/web/coverage
+
+# production
+/web/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
