--- a/json_schema/Components/Project/project.details.json
+++ b/json_schema/Components/Project/project.details.json
@@ -1,6 +1,5 @@
 {
-    "$id": "https://example.com/person.schema.json",
-    "$schema": "https://json-schema.org/draft/2020-12/schema",
+    "$schema": "http://json-schema.org/schema#",
     "title": "Project.Details",
     "version": "V0.01",
     "type": "object",
