--- a/hok_ecs/frontend/.eslintrc.json
+++ b/hok_ecs/frontend/.eslintrc.json
@@ -23,7 +23,7 @@
   "rules": {
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
-      "error",
+      "warn",
       {
         "varsIgnorePattern": "^_",
         "argsIgnorePattern": "^_"
