--- a/hok_ecs/frontend/package.json
+++ b/hok_ecs/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "codegen": "graphql-codegen",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -12,13 +13,18 @@
     "pretty-quick-staged": "pretty-quick --staged"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.7.9",
     "bootstrap": "^5.3.0-alpha1",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-select": "^5.7.0"
+    "react-select": "^5.7.0",
+    "urql": "^3.0.3"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^3.0.0",
+    "@graphql-codegen/client-preset": "^2.0.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
