--- a/hok_ecs/frontend/package.json
+++ b/hok_ecs/frontend/package.json
@@ -5,12 +5,13 @@
   "type": "module",
   "scripts": {
     "codegen": "graphql-codegen",
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"npm:watch-tsc\"",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .ts,.tsx",
     "pretty-quick": "pretty-quick --branch $(git rev-parse --abbrev-ref HEAD)",
-    "pretty-quick-staged": "pretty-quick --staged"
+    "pretty-quick-staged": "pretty-quick --staged",
+    "watch-tsc": "tsc --watch --noEmit"
   },
   "dependencies": {
     "@tanstack/react-table": "^8.7.9",
@@ -19,17 +20,23 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.8.1",
     "react-select": "^5.7.0",
-    "urql": "^3.0.3"
+    "ts-is-present": "^1.2.2",
+    "urql": "^3.0.3",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.0.0",
     "@graphql-codegen/client-preset": "^2.0.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-router-bootstrap": "^0.24.5",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "concurrently": "^7.6.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
@@ -38,6 +45,8 @@
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
+    "rollup-plugin-visualizer": "^5.9.0",
+    "sass": "^1.58.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vite-plugin-eslint": "^1.8.1"
