Clean up and Ready to create base data

--- a/json_schema/Entity and Component Definitions/project.details.json
+++ b/json_schema/Entity and Component Definitions/project.details.json
@@ -11,7 +11,7 @@
       },
       "project_name_alias": {
         "type": "string",
-        "description": "Location of the Project from a managmeent perspective "
+        "description": "Short name for the project "
       },
       "project_number": {
         "type": "string",
