--- a/hok_ecs/frontend/package.json
+++ b/hok_ecs/frontend/package.json
@@ -14,7 +14,11 @@
     "watch-tsc": "tsc --watch --noEmit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-table": "^8.7.9",
+    "@urql/exchange-refocus": "^1.0.0",
     "bootstrap": "^5.3.0-alpha1",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
