WIP Updates to Sample Data

--- a/json_schema/Entity and Component Definitions/project.location.polygon.json
+++ b/json_schema/Entity and Component Definitions/project.location.polygon.json
@@ -10,6 +10,7 @@
       ],
       "properties": {
         "type": {
+          "description":"Coordinates",
           "type": "string",
           "enum": [
             "Polygon"
