--- a/hok_ecs/frontend/package.json
+++ b/hok_ecs/frontend/package.json
@@ -27,6 +27,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.1",
     "react-select": "^5.7.0",
+    "react-vis-graph-wrapper": "^0.1.3",
     "ts-is-present": "^1.2.2",
     "urql": "^3.0.3",
     "zod": "^3.20.6"
