--- a/hok_ecs/frontend/package.json
+++ b/hok_ecs/frontend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "codegen": "graphql-codegen",
+    "schemas": "node makeZodSchemas.cjs",
     "dev": "concurrently \"vite\" \"npm:watch-tsc\"",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -41,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "camelcase": "^7.0.1",
     "concurrently": "^7.6.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
@@ -48,6 +50,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
+    "json-schema-to-zod": "^0.6.3",
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
     "rollup-plugin-visualizer": "^5.9.0",
