--- a/hok_ecs/frontend/codegen.yml
+++ b/hok_ecs/frontend/codegen.yml
@@ -1,6 +1,6 @@
 schema: http://localhost:4000/api/graphql
 documents:
-  - src/**/*.tsx
+  - src/**/*.{ts,tsx}
 ignoreNoDocuments: true
 generates:
   ./src/gql/:
