--- a/hok_ecs/frontend/package.json
+++ b/hok_ecs/frontend/package.json
@@ -18,6 +18,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@jsonforms/material-renderers": "^3.0.0",
+    "@jsonforms/react": "^3.0.0",
     "@tanstack/react-table": "^8.7.9",
     "@urql/exchange-refocus": "^1.0.0",
     "bootstrap": "^5.3.0-alpha1",
