--- a/hok_ecs/frontend/package.json
+++ b/hok_ecs/frontend/package.json
@@ -33,6 +33,7 @@
     "react-vis-graph-wrapper": "^0.1.3",
     "ts-is-present": "^1.2.2",
     "urql": "^3.0.3",
+    "usehooks-ts": "^2.9.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
