--- a/hok_ecs/frontend/package.json
+++ b/hok_ecs/frontend/package.json
@@ -34,12 +34,14 @@
     "react-vis-graph-wrapper": "^0.1.3",
     "ts-is-present": "^1.2.2",
     "urql": "^3.0.3",
+    "urql-custom-scalars-exchange": "^1.0.1",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.0.0",
     "@graphql-codegen/client-preset": "^2.0.0",
+    "@graphql-codegen/introspection": "^3.0.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-bootstrap": "^0.24.5",
