--- a/hok_ecs/frontend/package.json
+++ b/hok_ecs/frontend/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-table": "^8.7.9",
     "@urql/exchange-refocus": "^1.0.0",
     "bootstrap": "^5.3.0-alpha1",
+    "classnames": "^2.3.2",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
