--- a/hok_ecs/frontend/.eslintrc.json
+++ b/hok_ecs/frontend/.eslintrc.json
@@ -11,7 +11,8 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:@typescript-eslint/strict",
-    "eslint-config-prettier"
+    "eslint-config-prettier",
+    "plugin:storybook/recommended"
   ],
   "settings": {
     "react": {
