--- a/hok_ecs/frontend/package.json
+++ b/hok_ecs/frontend/package.json
@@ -12,7 +12,9 @@
     "lint": "eslint . --ext .ts,.tsx",
     "pretty-quick": "pretty-quick --branch $(git rev-parse --abbrev-ref HEAD)",
     "pretty-quick-staged": "pretty-quick --staged",
-    "watch-tsc": "tsc --watch --noEmit"
+    "watch-tsc": "tsc --watch --noEmit",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
@@ -43,6 +45,13 @@
     "@graphql-codegen/cli": "^3.0.0",
     "@graphql-codegen/client-preset": "^2.0.0",
     "@graphql-codegen/introspection": "^3.0.1",
+    "@storybook/addon-essentials": "^7.0.0-beta.59",
+    "@storybook/addon-interactions": "^7.0.0-beta.59",
+    "@storybook/addon-links": "^7.0.0-beta.59",
+    "@storybook/blocks": "^7.0.0-alpha.8",
+    "@storybook/react": "^7.0.0-beta.59",
+    "@storybook/react-vite": "^7.0.0-beta.59",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-bootstrap": "^0.24.5",
@@ -57,11 +66,14 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-storybook": "^0.6.11",
     "json-schema-to-zod": "^0.6.3",
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
+    "prop-types": "^15.8.1",
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.58.0",
+    "storybook": "^7.0.0-beta.59",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vite-plugin-eslint": "^1.8.1"
